<resources>
    <string name="app_name">Key Registrator</string>
    <string name="server_client_id">127775171233-cudgtb5mc7s0e83jj3nbofkb5thhig8q.apps.googleusercontent.com</string>
    <string name="local_account">Локальный аккаунт</string>
    <string name="text_empty_auds">Список пуст. Добавьте аудитории через настройки.</string>
    <string name="fragment_tag_nfc">fragment_tag_nfc</string>
    <string name="fragment_tag_search">fragment_tag_search</string>
    <string name="toolbar_title_main">Загруженность аудиторий</string>
    <string name="toolbar_title_persons">Преподаватели</string>
    <string name="toolbar_title_journal">Журнал</string>
    <string name="toolbar_title_auditrooms">Аудитории</string>
    <string name="toolbar_title_shedule">Расписание</string>
    <string name="toolbar_title_email">E-mail рассылка</string>
    <string name="title_activity_close_day_dialog">Статистика</string>
    <string name="title_activity_close_day_dialog_end">Занятия завершены!</string>
    <string name="title_delete_room_dialog">Удаление</string>
    <string name="title_add_new_staff">Добавление нового пользователя</string>
    <string name="title_dialog_log_out">Отсоединение аккаунта</string>
    <string name="title_activity_user_auth">Авторизация пользователя</string>
    <string name="label_add_button">Добавить</string>
    <string name="text_warning">Уважаемые преподаватели!\n
    Брать и сдавать ключи необходимо лично Вам!\n
    Не оставляйте компьютерный класс открытым!</string>
    <string name="erase_disclaimer">Внимание!\n
    При очистке данных с устройства будет удалена вся информация, накопленная приложением.\n
    Убедитесь в наличии резервной копии.</string>
    <string name="erase_server_also">Удалить также информацию на сервере</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="dialog_clear_journal_title">Очистка журнала посещений</string>
    <string name="dialog_clear_teachers_title">Очистка базы пользователей</string>
    <string name="dialog_clear_journal_erase_local">Удалить все записи на этом устройстве</string>
    <string name="dialog_clear_journal_erase_server">Удалить все записи на сервере</string>
    <string name="dialog_clear_teachers_message">Из базы данных преподавателей будут удалены все записи. Продолжить?</string>
    <string name="dialog_clear_rooms_title">Очистка базы помещений</string>
    <string name="dialog_clear_rooms_message">Из базы  будут удалены все записи. Продолжить?</string>
    <string name="fragment_add_new_staff_edit_hint">Начните вводить фамилию</string>
    <string name="done">Готово!</string>
    <string name="add">Добавить</string>
    <string name="title_check_sql_server_connect">Проверка подключения к SQL - серверу</string>
    <string name="dialog_delete_room_message">Удалить аудиторию </string>
    <string name="dialog_columns_title">Выберите количество колонок</string>
    <string name="delete">Удалить</string>
    <string name="empty_text_journal_item_room">AUD</string>
    <string name="empty_text_journal_item_time">00:00:00</string>
    <string name="title_dialog_delete_journal_item">Удаление записи</string>
    <string name="message_dialog_delete_journal_item_from_journal">Удалить из журнала</string>
    <string name="message_dialg_delete_journal_item_from_server_also">Удалить с сервера</string>
    <string name="title_dailog_delete_room_item">Удаление помещения </string>
    <string name="message_dialog_delete_room_item_local">Удалить с устройства</string>
    <string name="message_dialog_delete_room_item_server">Удалить с сервера</string>
    <string name="text_toast_put_card">Для сдачи ключей просто приложите карту</string>
    <string name="text_toast_choise_room_in_first">Вы не выбрали аудиторию!</string>
    <string name="text_toast_incorrect_card">Не удалось считать карту!</string>
    <string name="text_toast_thanks">Спасибо!</string>
    <string name="text_toast_take_key">Возьмите ключ</string>
    <string name="navigation_drawer_list_item_content_description_image">navigation_drawer_list_item_content_description</string>
    <string name="navigation_drawer_item_home">Главная</string>
    <string name="navigation_drawer_item_persons">Преподаватели</string>
    <string name="navigation_drawer_item_journal">Журнал</string>
    <string name="navigation_drawer_item_rooms">Аудитории</string>
    <string name="navigation_drawer_item_shedule">Расписание</string>
    <string name="navigation_drawer_item_settings">Настройки</string>
    <string name="navigation_drawer_item_mail">E-mail</string>
    <string name="navigation_drawer_item_sql">SQL-сервер</string>
    <string name="navigation_drawer_item_stat">Статистика</string>
    <string name="person_card_icon_division_descryption">person_card_icon_division_descryption</string>
    <string name="person_information_photo_descryption">person_information_photo_descryption</string>
    <string name="auditroom_grid_free_image_descryption">auditroom_grid_free_image_descryption</string>
    <string name="auditroom_grid_busy_image_person_description">auditroom_grid_busy_image_description</string>
    <string name="auditroom_grid_busy_image_key_description">auditroom_grid_busy_image_key_description</string>
    <string name="navigation_drawer_change_account_image_descritpion">navigation_drawer_change_account_image_descritpion</string>
    <string name="image_description_email_fragment_account_image">image_description_email_fragment_account_image</string>
    <string name="image_description_email_fragment_add_recipient">email_fragment_add_recipient</string>
    <string name="image_description_email_fragment_add_attachment">email_fragment_add_attachment</string>
    <string name="image_description_email_fragment_icon_attachment">image_description_email_fragment_icon_attachment</string>
    <string name="image_description_email_fragment_icon_delete_attachment">image_description_email_fragment_icon_delete_attachment</string>
    <string name="image_description_statistic_image_persons">image_description_statistic_image_person</string>
    <string name="image_description_statistic_image_journal">image_description_statistic_image_journal</string>
    <string name="image_description_sql_server_status">image_description_sql_server_status</string>
    <string name="image_description_sql_server_refresh">image_description_sql_server_refresh</string>
    <string name="image_description_sql_journal_item_timer">image_description_sql_journal_item_timer</string>
    <string name="image_description_sql_journal_item_access">image_description_sql_journal_item_access</string>
    <string name="nfc_fragment_aud_image_descryption">nfc_fragment_aud_image_descryption</string>
    <string name="descryption_navigation_drawer_list_item_image">descryption_navigation_drawer_list_item_image</string>
    <string name="descryption_person_card_image_user">descryption_person_card_image_user</string>
    <string name="descryption_nfc_fragment_reader_image">descryption_nfc_fragment_reader_image</string>
    <string name="descryption_card_email_add_new_recipient_delete">descryption_card_email_add_new_recipient_delete</string>
    <string name="descryption_card_email_add_new_recipient_save">descryption_card_email_add_new_recipient_save</string>
    <string name="descryption_person_card_icon_access">descryption_person_card_icon_access</string>
    <string name="view_enter_password_hint_password">Пароль</string>
    <string name="view_enter_password_title">Требуется пароль</string>
    <string name="view_enter_password_entered_incorrect">Неверный пароль!</string>
    <string name="view_enter_auditroom_hint_room">Помещение</string>
    <string name="view_enter_auditroom_title">Добавить</string>
    <string name="journal_card_during_lesson">Идёт занятие</string>
    <string name="person_information_text_lastname">Фамилия</string>
    <string name="person_information_text_firstname">Имя</string>
    <string name="person_information_text_midname">Отчество</string>
    <string name="person_information_text_division">Структурное подразделение</string>
    <string name="person_information_access_type">Доступ без карты</string>
    <string name="snack_user_added">Пользователь добавлен!</string>
    <string name="snack_cancel">Отменить</string>
    <string name="snack_cancelled">Отменено</string>
    <string name="input_empty_error">Введите хотя бы один символ!</string>
    <string name="input_already_exist_error">Такое помещение уже есть!</string>
    <string name="input_sql_server_name_error">Имя сервера не может быть пустым!</string>
    <string name="view_resize_title">Для изменения размера элементов перетащите ползунок справа</string>
    <string name="dialog_log_out_message">Вы точно хотите отсоединить этот аккаунт? Все введенные данные останутся невредимы.</string>
    <string name="email_fragment_input_theme_hint">Тема</string>
    <string name="email_fragment_input_message_hint">Текст сообщения</string>
    <string name="email_fragment_recepients_text">Получатели</string>
    <string name="email_fragment_attachments_text">Вложения</string>
    <string name="email_fragment_logon">Для отправки писем сначала войдите в аккаунт</string>
    <string name="email_fragment_error_not_email_entered">Некорректный e-mail </string>
    <string name="card_email_add_new_recepient_input">Введите e-mail</string>
    <string name="card_statistic_today_count">Посещений за день:</string>
    <string name="card_statistic_autoclose_count">Закрыто автоматически:</string>
    <string name="card_statistic_head_stat">Статистика</string>
    <string name="card_statistic_head_close">Занятия завершены!</string>
    <string name="nfc_fragment_head">Приложите свою кампусную карту к считывателю</string>
    <string name="nfc_fragment_free_users">Нажмите тут, если нет карты</string>
    <string name="dialog_sql_server_connected">Соединение установлено</string>
    <string name="dialog_sql_server_hint_server">Имя или IP-адрес сервера</string>
    <string name="menu_auditrooms_set_columns_number">Количество колонок</string>
    <string name="menu_auditrooms_save_to_file">Сохранить</string>
    <string name="menu_auditrooms_load_from_file">Загрузить</string>
    <string name="menu_auditrooms_clear">Очистить</string>
    <string name="menu_teachers_save_to_file">Сохранить</string>
    <string name="menu_teachers_download_favorite">Загрузить из файла</string>
    <string name="menu_teachers_delete">Очистить</string>
    <string name="menu_teachers_select_location_for_copy">Указать папку для копии</string>
    <string name="shared_preferences_category_sheduler">Планировщик</string>
    <string name="shared_preferences_category_server">Сервер</string>
    <string name="shared_preferences_category_basic">Общие</string>
    <string name="shared_preferences_main_grid_size">Размер сетки</string>
    <string name="shared_preferences_main_grid_size_summary">Количество строк и колонок на главном экране</string>
    <string name="shared_preferences_sheduler">Сервис задач</string>
    <string name="shared_preferences_sheduler_disabled">отключен</string>
    <string name="shared_preferences_sheduler_enabled">активен</string>
    <string name="shared_preferences_sheduler_time">Время срабатывания</string>
    <string name="shared_preferences_write_server">Синхронизация</string>
    <string name="shared_preferences_server_disabled">отключена</string>
    <string name="shared_preferences_server_enabled">активна</string>
    <string name="shared_preferences_sql_settings">Подключение</string>
    <string name="shared_preferences_write_server_items_key">Параметры синхронизации</string>
    <string name="shared_preferences_local_tasks_key">Задачи</string>
    <string name="shared_preferences_local_tasks_summary">Действия, выполняемые сервисом</string>
</resources>