<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/shared_preferences_category_basic"
        android:title="@string/shared_preferences_category_basic">

        <Preference
            android:key="@string/shared_preferences_main_grid_size"
            android:title="@string/shared_preferences_main_grid_size"
            android:summary="@string/shared_preferences_main_grid_size_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/shared_preferences_category_sheduler"
        android:title="@string/shared_preferences_category_sheduler">

        <SwitchPreference
            android:key = "@string/shared_preferences_sheduler"
            android:title = "@string/shared_preferences_sheduler"
            android:summaryOn="@string/shared_preferences_sheduler_enabled"
            android:summaryOff="@string/shared_preferences_sheduler_disabled"/>

        <com.example.ivsmirnov.keyregistrator.custom_views.TimePreference
            android:key="@string/shared_preferences_sheduler_time"
            android:title="@string/shared_preferences_sheduler_time"
            android:dependency="@string/shared_preferences_sheduler"/>

        <MultiSelectListPreference
            android:key="@string/shared_preferences_local_tasks_key"
            android:title="@string/shared_preferences_local_tasks_key"
            android:entries="@array/shared_preferences_local_tasks_entries"
            android:entryValues="@array/shared_preferences_local_tasks_entries"
            android:dependency="@string/shared_preferences_sheduler"
            android:summary="@string/shared_preferences_local_tasks_summary" />

        <!--<CheckBoxPreference
            android:key="@string/shared_preferences_auto_close"
            android:title="@string/shared_preferences_auto_close"
            android:dependency="@string/shared_preferences_sheduler"/>

        <CheckBoxPreference
            android:key="@string/shared_preferences_email_distribution"
            android:title="@string/shared_preferences_email_distribution"
            android:dependency="@string/shared_preferences_sheduler"/>

        <SwitchPreference
            android:key="@string/shared_preferences_file_writer"
            android:title="@string/shared_preferences_file_writer"
            android:dependency="@string/shared_preferences_sheduler"/>

        <CheckBoxPreference
            android:key="@string/shared_preferences_write_journal"
            android:title="@string/shared_preferences_write_journal"
            android:dependency="@string/shared_preferences_file_writer"/>

        <CheckBoxPreference
            android:key="@string/shared_preferences_write_teachers"
            android:title="@string/shared_preferences_write_teachers"
            android:dependency="@string/shared_preferences_file_writer"/>

        <CheckBoxPreference
            android:key="@string/shared_preferences_write_rooms"
            android:title="@string/shared_preferences_write_rooms"
            android:dependency="@string/shared_preferences_file_writer"/-->

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/shared_preferences_category_server"
        android:title="@string/shared_preferences_category_server">

        <com.example.ivsmirnov.keyregistrator.custom_views.SQLPreference
            android:key="@string/shared_preferences_sql_settings"
            android:title="@string/shared_preferences_sql_settings"
            android:summary="Параметры соединения с сервером MSSQL"/>

        <SwitchPreference
            android:key="@string/shared_preferences_write_server"
            android:title="@string/shared_preferences_write_server"
            android:summaryOn="@string/shared_preferences_server_enabled"
            android:summaryOff="@string/shared_preferences_server_disabled"/>

        <MultiSelectListPreference
            android:key="@string/shared_preferences_write_server_items_key"
            android:title="@string/shared_preferences_write_server_items_key"
            android:entries="@array/shared_preferences_write_server_items_entries"
            android:entryValues="@array/shared_preferences_write_server_items_entries"
            android:dependency="@string/shared_preferences_write_server"
            android:summary="Выберите, что синхронизировать с сервером"
            />

       <!-- <CheckBoxPreference
            android:key="@string/shared_preferences_write_journal_server"
            android:title="@string/shared_preferences_write_journal_server"
            android:dependency="@string/shared_preferences_write_server"/>

        <CheckBoxPreference
            android:key="@string/shared_preferences_write_teachers_server"
            android:title="@string/shared_preferences_write_teachers_server"
            android:dependency="@string/shared_preferences_write_server"/>

         <CheckBoxPreference
             android:key="@string/shared_preferences_write_rooms_server"
             android:title="@string/shared_preferences_write_rooms_server"
             android:dependency="@string/shared_preferences_write_server"/>-->

    </PreferenceCategory>

</PreferenceScreen>