<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_auditrooms_set_columns_number"
        android:title="@string/menu_auditrooms_set_columns_number"
        android:icon="@drawable/ic_view_column_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_auditrooms_save_to_file"
        android:title="@string/menu_auditrooms_save_to_file"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_auditrooms_load_from_file"
        android:title="@string/menu_auditrooms_load_from_file"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_auditrooms_clear"
        android:title="@string/menu_auditrooms_clear"
        app:showAsAction="never"/>
</menu>