<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_default_margin">

    <CheckBox
        android:id="@id/dialog_erase_journal_check"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toolbar_title_journal"/>

    <CheckBox
        android:id="@id/dialog_erase_persons_check"
        android:layout_below="@id/dialog_erase_journal_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toolbar_title_persons"/>

    <CheckBox
        android:id="@id/dialog_erase_rooms_check"
        android:layout_below="@id/dialog_erase_persons_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toolbar_title_auditrooms"/>

    <TextView
        android:id="@id/dialog_erase_disclaimer"
        android:layout_below="@id/dialog_erase_rooms_check"
        android:layout_marginTop="@dimen/default_content_margin"
        android:layout_marginBottom="@dimen/default_content_margin"
        android:text="@string/erase_disclaimer"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@id/dialog_erase_server_check"
        android:layout_below="@id/dialog_erase_disclaimer"
        android:text="@string/erase_server_also"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>