<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/person_information_layout_margin">

    <ImageView
        android:id="@+id/person_information_image"
        android:layout_width="@dimen/person_information_image_width"
        android:layout_height="@dimen/person_information_image_height"
        android:contentDescription="@string/person_information_photo_descryption"/>

    <RelativeLayout
        android:id="@+id/person_information_layout_fields"
        android:layout_toRightOf="@+id/person_information_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/person_information_text_lastname_layout"
            style="@style/PersonInformationField">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/person_information_text_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_information_text_lastname"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/person_information_text_firstname_layout"
            android:layout_below="@+id/person_information_text_lastname_layout"
            style="@style/PersonInformationField">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/person_information_text_firsttname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_information_text_firstname"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/person_information_text_midname_layout"
            android:layout_below="@+id/person_information_text_firstname_layout"
            style="@style/PersonInformationField">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/person_information_text_midname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_information_text_midname"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/person_information_text_division_layout"
            android:layout_below="@+id/person_information_text_midname_layout"
            style="@style/PersonInformationField">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/person_information_text_division"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/person_information_text_division"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>



</RelativeLayout>