<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/layout_default_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@id/preference_item_sql_input_server"
        android:hint="@string/dialog_sql_server_hint_server"
        android:paddingStart="@dimen/default_content_margin"
        android:paddingEnd="@dimen/default_content_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/preference_item_sql_status"
        android:layout_toStartOf="@id/preference_item_sql_status"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@id/preference_item_sql_status"
        android:src="@drawable/ic_cloud_off_black_48dp"
        android:layout_toLeftOf="@id/preference_item_sql_check_connect"
        android:layout_toStartOf="@id/preference_item_sql_check_connect"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/default_content_margin"
        android:contentDescription="@string/image_description_sql_server_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@id/preference_item_sql_check_connect"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/default_content_margin"
        android:src="@drawable/ic_sync_black_48dp"
        android:clickable="true"
        android:contentDescription="@string/image_description_sql_server_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>